# gait-monitor

./: .env.example  .env.production  .gitignore  CSS_ARCHITECTURE.md  LICENSE  README.md  TESTING_RESULTS.md  eslint.config.js  index.html  jest.config.cjs  jest.coverage.config.cjs  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
docs/: API_DOCUMENTATION.md  DOCUMENTATION_STATUS.md
gaitBLE-mock-firmware/: README.md
gaitBLE-mock-firmware/gaitBLE_LeftFoot/: gaitBLE_LeftFoot.ino
gaitBLE-mock-firmware/gaitBLE_RightFoot/: gaitBLE_RightFoot.ino
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: analytics.rs  backup_system.rs  batch_processing.rs  buffer_manager.rs  cache.rs  config.rs  data_processing.rs  device_management.rs  file_operations.rs  lib.rs  main.rs  monitoring.rs  path_manager.rs  security.rs  validation.rs
src-tauri/src/tests/: analytics_tests.rs  config_tests.rs  integration_tests.rs  mod.rs  performance_tests.rs  simple_tests.rs  test_utils.rs  validation_tests.rs
src/__tests__/: App.test.tsx
src/components/: BufferStatsPanel.tsx  CollectTab.tsx  ConfirmationModal.tsx  ConnectTab.tsx  DataViewer.old.tsx  DataViewer.tsx  DeviceList.tsx  ErrorBoundary.tsx  KeyboardHelpDialog.tsx  LiveChart.tsx  LiveChart_new.tsx.bak  LiveChart_old.tsx.bak  LiveChart_previous.tsx.bak  LiveChart_updated.tsx  LoadingSpinner.tsx  LogsTab.tsx  LogsTable.tsx  MetadataForm.tsx  MultiDeviceSelector.tsx  OptimizedDataViewer.tsx  ScrollableContainer.tsx  SettingsPanel.tsx  SettingsTab.tsx  Sidebar.tsx  TypedConfirmationModal.tsx  icons.tsx
src/components/__tests__/: BufferStatsPanel.test.tsx  CollectTab.test.tsx  ConfirmationModal.test.tsx  (+17 more)
src/config/: index.ts  test-index.ts
src/contexts/: DeviceConnectionContext.tsx  ScrollContext.tsx  ToastContext.tsx
src/hooks/: useBufferManager.ts  useConfirmation.ts  useKeyboardShortcuts.ts  usePersistentForm.ts  usePersistentWorkflow.ts  useScroll.ts  useTabScrollReset.ts  useTimestampManager.ts
src/services/: analytics.ts  csrfProtection.ts  validation.ts
src/styles/: chart.css  collect.css  forms.css  globals.css  keyboard-help.css  modal.css  settings.css  sidebar.css  tables.css  tabs.css  toast.css
src/test/: jest-matchers.d.ts  jest-setup.ts  setup.ts  tsconfig.json  utils.ts
src/types/: index.ts  validation.ts
src/utils/: BufferManager.ts  TimestampManager.ts  chartSetup.ts  colorGeneration.ts  dataTransform.ts  testColors.ts
(+29 files in other folders)
