[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0", features = [] }
btleplug = { version = "0.10", features = ["serde"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
async-std = { version = "1.10", features = ["attributes"] }
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tokio = { version = "1.0", features = ["fs"] }
sha2 = "0.10"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ring = "0.17"
dashmap = "5.5"
governor = "0.6"
nonzero_ext = "0.3"

